fixed overflowing effects and history list, added always scroll to bottom

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -69,6 +69,8 @@ main {
   .effects_list {
     display: flex;
     flex-direction: column;
+
+    overflow-y: auto;
   }
 }
 
